<resources>
    <string name="app_name">Weather</string>
    <string name="feels_like">ощущается</string>
    <string name="temperature">на улице</string>
    <string name="city_coordinates">lt/ln: %s, %s</string>
    <string name="error">Ошибка загрузки</string>
    <string name="reload">Перезагрузить</string>
    <string name="todo">TODO</string>
    <string name="locations">locations</string>
    <string name="geekbrains_ru">https://geekbrains.ru/</string>
    <string name="ok">ok</string>
    <string name="threads">Threads</string>
    <string name="in_main_thread">В главном потоке</string>
    <string name="from_thread">Из потока %d</string>
    <string name="in_thread">Выводим в потоке %s</string>
    <string name="calculate_in_thread">Считаем в потоке %s</string>
    <string name="my_handler_thread">My_Handler_Thread</string>
    <string name="hello_from_thread_fragment">Hello from ThreadsFragment</string>
    <string name="calculate">Расчет</string>
    <string name="default_number">1</string>
    <string name="calc_in_thread">Расчет в потоке</string>
    <string name="handler_thread">Handler_Thread</string>
    <string name="service">Service</string>
    <string name="service_broadcast">Service + Broadcast</string>
    <string name="menu_title_history">история</string>
    <string name="settings">настройки</string>
    <string name="show_pressure">Показывать давление</string>
    <string name="show_wind_speed">Показывать скорость ветра</string>
    <string name="pressure">давление</string>
    <string name="wind_speed">ветер</string>
    <string name="contacts">контакты</string>
    <string name="authorities">weather.provider</string>
    <string name="dialog_button_close">Закрыть</string>
    <string name="dialog_title_no_gps">Доступ к геолокации закрыт</string>
    <string name="dialog_message_no_gps">Разрешите доступ к геолокации, если хотите
узнать погоду текущего места</string>
    <string name="dialog_title_gps_turned_off">GPS отключён</string>
    <string name="dialog_message_last_location_unknown">Местонахождение неизвестно.
Включите GPS, если хотите получить погоду по текущему адресу</string>
    <string name="dialog_message_last_known_location">Показана последняя известная
локация. Включите GPS, если хотите обновить местонахождение</string>
    <string name="dialog_rationale_title">Доступ к геолокации</string>
    <string name="dialog_rationale_meaasge">Объяснение</string>
    <string name="dialog_rationale_give_access">Предоставить доступ</string>
    <string name="dialog_rationale_decline">Не надо</string>
    <string name="dialog_address_title">Ваш адрес</string>
    <string name="dialog_address_get_weather">Узнать погоду</string>
    <string name="google_maps">maps</string>
    <string name="default_address">Red Square, 1, Moscow</string>
    <string name="button_search_map">Search</string>
    <string name="marker_start">Start</string>
</resources>