<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainDetailsFragmentRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragmentBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/headerIcon"
            android:layout_width="match_parent"
            android:layout_height="@dimen/town_header_height"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/currentCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/city_name_margin_top"
            android:textSize="@dimen/temperature_value_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headerIcon"
            tools:text="current city" />

        <TextView
            android:id="@+id/coordinates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15_dp"
            android:paddingTop="@dimen/text_fields_padding_top"
            android:text="@string/city_coordinates"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/currentCity" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/weatherIcon"
            android:layout_width="@dimen/weather_icon_width"
            android:layout_height="@dimen/weather_icon_height"
            android:layout_marginTop="@dimen/margin_15_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/coordinates"
            tools:srcCompat="@drawable/ic_bkn_d" />

        <TextView
            android:id="@+id/weatherCondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15_dp"
            android:textSize="@dimen/feels_like_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weatherIcon"
            tools:text="Forecast" />

        <TableLayout
            android:id="@+id/temperatureLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weatherCondition">

            <TableRow>

                <TextView
                    android:id="@+id/temperatureLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/temperature"
                    android:textAlignment="center"
                    android:textSize="@dimen/feels_like_text_size"
                    app:layout_constraintTop_toBottomOf="@id/weatherCondition" />

                <TextView
                    android:id="@+id/temperature"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="@dimen/temperature_value_text_size"
                    app:layout_constraintTop_toBottomOf="@id/temperatureLabel"
                    tools:text="20C" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/feelsLikeLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/feels_like"
                    android:textAlignment="center"
                    android:textSize="@dimen/feels_like_text_size" />

                <TextView
                    android:id="@+id/feelsLike"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="@dimen/feels_like_text_size"
                    tools:text="20C" />
            </TableRow>

            <TableRow
                android:id="@+id/pressureLabel"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pressure"
                    android:textAlignment="center"
                    android:textSize="@dimen/feels_like_text_size" />

                <TextView
                    android:id="@+id/pressure"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="@dimen/feels_like_text_size"
                    tools:text="750мм" />
            </TableRow>

            <TableRow
                android:id="@+id/windSpeedLabel"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/wind_speed"
                    android:textAlignment="center"
                    android:textSize="@dimen/feels_like_text_size" />

                <TextView
                    android:id="@+id/wind_speed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="@dimen/feels_like_text_size"
                    tools:text="5 м/с" />
            </TableRow>
        </TableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/includedLoadingLayout"
        layout="@layout/loading_layout"
        tools:visibility="gone" />
</FrameLayout>
